extern/frontend/stylesheets/style.css
/* common styles for all MayDayPAC modules */

/*By default, grid.css, which is part of Twitter Bootstrap, decorates the divs and makes it obvious where the boundaries are.  This code resets borders and background colors to their defaults.*/

.col-md-1,
.col-md-2,
.col-md-3,
.col-md-4,
.col-md-5,
.col-md-6,
.col-md-7,
.col-md-8,
.col-md-9 {
    background-color: transparent;
    border: none;
    padding:0;
    margin:0;
}

.row,
.row-fluid {
    background-color: transparent;
    border: none;
    padding:0;
    margin:0;
}

/*Bootstrapper only reaches 960px, so we need to wrap our rows in yet another div - one that reaches the full width of the page*/

body {
    font-family: 'Lato',  helvetica, arial, 'sans serif';
}

.full-width {
    width: 100%;
}

/* Top menu */

.menu-row {
    margin: 0;
    padding: 0;
}

.topmenu {
    font-family: 'Oswald', arial, helvetica, 'sans serif';
    color: white;
    font-size: 15px;
    background-color: #003366;
    text-align: center;
    padding: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    float: right;
}

.topmenu:hover {
    background-color: #004477;
    color: white;
}


.topmenu_red{
   font-family: 'Oswald', arial, helvetica, 'sans serif';
    color: white;
    font-size: 15px;
    background-color: #800000;
    text-align: center;
    padding: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    float: right;
}
.topmenu_red:hover{
background-color: #9e0b0f;
}

@media only screen and (max-width: 991px) {
    .topmenu {
        padding: 10px 20px;
    }
}

@media only screen and (max-width: 767px) {
    .topmenu {
        clear: both;
        width: 100%;
        border-top: 1px solid #00254B;
    }
}


/* Logo row */

.logo-row {
    position:relative;
    padding-top: 0;
    margin-bottom: -10px;
	margin-top:10px;
	text-align:left;
	top:-30px;
	z-index:-20;
}
.logo-row img{
    width: 33%;
    max-width: 310px;
}

@media only screen and (max-width: 767px) {
    .logo-row {
    	text-align:center;
    	top: 0;
    	margin-bottom: 20px;
    }

    .logo-row img{
        width:66%;
    }
}


.subhead {
    font-family: "Oswald", arial, helvetica, "sans serif";
    color: #999999;
    font-size: 22px;
}
/*END OF THE COMMON HEAD AREA*/

/* END OF THE COMMON HEAD AREA */


/* Hero Text Row */

.herotext-row {
  background-color: black;
}

.herotext {
  font-family: "Oswald", arial, helvetica, "sans serif";
  color:white;
  text-align:center;
  font-size:45px;
  line-height:45px;
  background-color:black;
  padding-top:20px;
  padding-bottom:20px;
}

/*Hero Area*/


.slideroption img {
  width: 100%;
  opacity: 0;
  transition: 600ms opacity;
  position: absolute;
  top: 0;
  left: 0;
}
.slideroption img.active {
  opacity: 1;
}


.hero-fw{
  position:relative;
  background-image:url('../../../images/05-midwest.jpg');
  background-size:cover;
  background-repeat:no-repeat;
  background-position:center center;
  border-bottom:4px solid white;
}
.underlay {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: -10;
  overflow:hidden;
}
.underlay img{
  width:100%;
  height:100%;
}

.heroarea {
  margin-left:auto;
  margin-right:auto;
  padding-top:50px;
  padding-bottom:50px;

}

.video {
  margin-top:40px;
  margin-bottom:40px;
  margin-left:20px;
  margin-right:20px;
  height:300px;
  border: 3px solid white;
}

.pledgebutton{
  background-color: #9e0b0f;
  color: #ffffcc;
  margin-left:auto;
  margin-right:auto;
  margin:10px 50px;
  padding:10px 20px;
  font-family: "Oswald", arial, helvetica, "sans serif";
  text-align: center;
  font-size:50px;
  border: 3px solid white;
  z-index:20;
}

.pledgebutton:hover{
  z-index:20;
  box-shadow: 0px 0px 10px #fff;
  text-shadow: 0px 0px 5px #fff;
  text-decoration:none;
}

.checkpoint-text{
  font-family: "Lato", arial, helvetica, "sans serif";
  color:white;
  text-align:center;
}
#complete-total-raised {
  font-family: "Lato", arial, helvetica, "sans serif";
  color:white;
  text-align:center;
}

.progress-container {
  margin-top:30px;
}

.progbar {
  margin-top:40px;
  margin-bottom:40px;
  margin-left:20px;
  margin-right:20px;
  padding:30px;
  height:300px;
  background-color: rgba(0, 51, 102, 0.7); /*blue transparency*/
  border: 3px solid white;
}

/*Fancy Progress Bar Stuff*/

.donation-progress-bar {
  background: #838383;
  border-radius: 26px;
  width: 100%;
  height: 26px;
  padding: 0 25px;
  position: relative;
}

.donation-progress-bar > span {
  font-size: 13px;
  text-transform: uppercase;
  line-height: 26px;
  color: #fff;
  position: relative;
  z-index: 2;
  width: 33%;
  float: left;
}

.donation-progress-bar.endless > span {
  width: 50%;
}

.donation-progress-bar.endless em {
  font-style: normal;
}

.donation-progress-bar .donation-progress-funded {
  text-align: center;
}

.donation-progress-bar .donation-progress-togo,
.donation-progress-bar.endless .donation-progress-funded {
  text-align: right;
}
/* ... */

